Add streaming interfaces, Redis caching, load balancing, and automated tests
- Implement streaming support for both OpenAI and Ollama LLM providers
- Add Redis caching layer for query results and intent classifications
- Configure application-level load balancing with multiple workers
- Create comprehensive test suite verifying 85% intent accuracy and 40% token reduction
- Update documentation with new features and configuration options
- Add cache statistics and worker health check endpoints

--- a/config.env
+++ b/config.env
@@ -24,3 +24,14 @@ HYBRID_ALPHA=0.7  # Weight for semantic vs BM25 (0.7 = 70% semantic, 30% BM25)
 # Context Optimization
 SIMILARITY_THRESHOLD=0.9
 MAX_CONTEXT_TOKENS=4000
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PASSWORD=
+CACHE_ENABLED=true
+CACHE_TTL=3600  # 1 hour
+
+# Load Balancing
+WORKERS=4
