--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,10 @@ pydantic==2.5.0
 tiktoken==0.5.1
 watchdog==3.0.0
 
+# Caching
+redis>=5.0.0
+hiredis>=2.2.0
+
 # Development
 pytest==7.4.3
 pytest-asyncio==0.21.1
